TestSuite/errors/err0307.pas
type
  I1 = interface
    procedure operator+=(x, y: I1);
  end;

begin
end.